agregar script start

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./server/app.js",
   "scripts": {
     "build": "webpack -w",
+    "start":"node ./server/App.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
