--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./server/app.js",
   "scripts": {
-    "build": "webpack -w",
+    "build": "webpack",
     "start":"node ./server/App.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
